tests/ci/expected/0201-main-return-type.error.c.expected
ci/0201-main-return-type.error.c:1:1: error: undefined behaviour: return type of 'main' should be 'int'
float main(void) { return 1.; }
~~~~~ ^
ยง5.1.2.2.1#1: 
1   The function called at program startup is named main. The implementation declares no
    prototype for this function. It shall be defined with a return type of int and with no
    parameters:
            int main(void) { /* ... */ }
    or with two parameters (referred to here as argc and argv, though any names may be
    used, as they are local to the function in which they are declared):
            int main(int argc, char *argv[]) { /* ... */ }
    or equivalent;10) or in some other implementation-defined manner.
